--- a/angular/build.gradle
+++ b/angular/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         classpath 'com.github.jruby-gradle:jruby-gradle-plugin:0.1.5'
         classpath 'org.ysb33r.gradle:vfs-gradle-plugin:1.0-beta1'
         classpath 'commons-httpclient:commons-httpclient:3.1'
+        classpath 'com.bluepapa32:gradle-watch-plugin:0.1.5'
     }
 }
 
@@ -15,6 +16,7 @@ apply plugin: 'com.github.jruby-gradle.base'
 apply plugin: 'org.ysb33r.vfs'
 apply plugin: 'java'
 apply plugin: 'org.asciidoctor.convert'
+apply plugin: 'com.bluepapa32.watch'
 
 version = '1.0.0-SNAPSHOT'
 defaultTasks 'asciidoctor'
@@ -88,3 +90,10 @@ asciidoctor {
 
 //asciidoctor.dependsOn download
 build.dependsOn asciidoctor
+
+watch {
+    asciidoc {
+        files fileTree(dir: 'src/docs/asciidoc', include: '**/*.adoc')
+        tasks 'asciidoctor'
+    }
+}
