--- a/springboot/build.gradle
+++ b/springboot/build.gradle
@@ -33,12 +33,20 @@ repositories {
 
 
 dependencies {
-	compile('org.springframework.boot:spring-boot-starter-actuator')
-	compile('org.springframework.boot:spring-boot-starter-data-jpa')
-	compile('org.springframework.boot:spring-boot-starter-web')
-	compile('org.codehaus.groovy:groovy')
-	runtime('com.h2database:h2')
-	testCompile('org.springframework.boot:spring-boot-starter-test') 
+	compile 'org.springframework.boot:spring-boot-starter-actuator'
+	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+	compile 'org.springframework.boot:spring-boot-starter-data-rest'
+	compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	compile 'org.codehaus.groovy:groovy'
+
+    runtime 'com.h2database:h2'
+
+    runtime 'org.webjars.bower:react:0.12.2'
+    runtime 'org.webjars.bower:react:0.12.2'
+    runtime 'org.webjars:Rest:1.2.0'
+
+
+    testCompile('org.springframework.boot:spring-boot-starter-test')
 	
 	
     gems 'rubygems:slim:2.1.0'
