--- a/springboot/build.gradle
+++ b/springboot/build.gradle
@@ -37,6 +37,8 @@ dependencies {
 	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compile 'org.springframework.boot:spring-boot-starter-data-rest'
 	compile 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	compile 'org.springframework.boot:spring-boot-devtools'
+
 	compile 'org.codehaus.groovy:groovy'
 
     runtime 'com.h2database:h2'
