--- a/micro-devops/build.gradle
+++ b/micro-devops/build.gradle
@@ -22,17 +22,37 @@ apply plugin: 'org.asciidoctor.convert'
 apply plugin: 'com.github.jruby-gradle.base'
 apply plugin: 'org.ysb33r.vfs'
 
-version = '1.0.0-SNAPSHOT'
+def mainVersion = file('version').text.trim()
+def buildNumber = System.env.BUILD_NUMBER
+if (buildNumber) {
+    ext.projectVersion = "$mainVersion.$buildNumber"
+    file('build-version').text = ext.projectVersion
+} else {
+    ext.projectVersion = "$mainVersion-SNAPSHOT"
+}
+println "project version: $projectVersion"
+
+group = 'be.ixor.techtalks'
+version = projectVersion
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
+
+
+jar {
+    manifest {
+        attributes 'Implementation-Title': 'Micro-devOps-sample-lib',
+                'Implementation-Version': version,
+                'Main-Class': 'be.ixor.techtalks.devops.VersionInfo'
+    }
+}
 
 repositories {
     jcenter()
 }
 
 dependencies {
-    compile 'org.codehaus.groovy:groovy'
+    compile 'org.codehaus.groovy:groovy-all:2.4.9'
 
     //asciidoctor dependencies
     gems 'rubygems:slim:2.1.0'
