--- a/micro-devops/build.gradle
+++ b/micro-devops/build.gradle
@@ -16,24 +16,15 @@ buildscript {
 }
 
 apply plugin: 'groovy'
+apply from: 'version.gradle'
 
 //asciidoctor plugins
 apply plugin: 'org.asciidoctor.convert'
 apply plugin: 'com.github.jruby-gradle.base'
 apply plugin: 'org.ysb33r.vfs'
 
-def mainVersion = file('version').text.trim()
-def buildNumber = System.env.BUILD_NUMBER
-if (buildNumber) {
-    ext.projectVersion = "$mainVersion.$buildNumber"
-    file('build-version').text = ext.projectVersion
-} else {
-    ext.projectVersion = "$mainVersion-SNAPSHOT"
-}
-println "project version: $projectVersion"
-
 group = 'be.ixor.techtalks'
-version = projectVersion
+println version
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
